# AetherSim

./: LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
modules/: agent.py  llm_provider.py
src/: main.py
