[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethersim"
version = "0.2.0"
description = "Production-ready autonomous CEO-CTO agent framework + hierarchical universe simulator for multi-celestial habitation R&D"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "James Ryan Taylor", email = "jam3sryantaylor@x.ai"}
]
keywords = ["ai-agent", "simulation", "space", "autonomous-systems", "first-principles", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "numpy",
    "scipy",
    "sympy",
    "astropy",
]

[project.scripts]
aethersim = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "prompts/*", "docs/*", "examples/*"]
